energierechnung und systemgrenze

--- a/latex/kapitel/energiebilanz.tex
+++ b/latex/kapitel/energiebilanz.tex
@@ -1,11 +1,30 @@
 \chapter{Energiebilanz}
 \label{chap:bilanz}
 
+Wir werden die Benötigte Energie und damit den $CO_2$ Ausstoss der Beiden
+Heizungen Anhand der von uns festgelegten Heizleistung von 10 kW.
+
 \section{Wärmepumpe}
 
+Mit Hilfe des COP berechnen wir die Benötigte Stromleistung bei einer
+Aussentemperatur von 6.6 C°.
+Das Ergibt eine Stromleistung 1.95 kW.
 
+Wir Errechnen anhand des vorher definierten Energiemixes den Gesammtverbrauch
+der Energie um diesen Strom bereitzustellen und den damit einhergehenden $CO_2$
+Ausstoss.
+Wir erhalten 5.46 kW Gesammtverbrauch und 445.5 g $C0_2$.
 
 \section{Ölbrennwertkessel}
+
+Wir betrachten den Wirkungsgrad der Ölheizung.
+Laut Herstellerangaben Liegt dieser bei 97\%.
+Damit kommen wir auf einen Bedarf von 10.3 kW.
+Nun beziehen wir noch die Produktionsenergie für das ÖL mit ein und erhalten
+insgesammt 33.99 kW.
+Der $CO_2$ Ausstoss liegt bei 290 g CO2 pro kwh.
+[http://www.co2-emissionen-vergleichen.de/Heizungsvergleich/CO2-Vergleich-Heizung.html].
+das Ergibt uns einen $CO_2$ Ausstoss von 9857 g.
 
 \section{Vergleich}
 
