--- a/latex/kapitel/systemgrenze.tex
+++ b/latex/kapitel/systemgrenze.tex
@@ -34,7 +34,16 @@ Die Solewasserwärmepumpe bezieht ihre Energie hauptsächlich aus zwei Quellen:
 
 Für uns ist vor allem der Stromverbrauch interessant, da dies ein Kostenpunkt
 ist und damit auch Umweltbelastungen verbunden sind.
-Als Grundlage nehmen wir den Schweizer Energiemix nach ...
+
+Als Grundlage nehmen wir den Liferanten-Strommix in der Schweiz nach
+[Umweltbilanz Strommix Schweiz 2011]
+dieser veruhrsacht 81.6 g $CO_2 /kWh$
+und benötgt bei der Produktion 10.1 MJ/kWh wir Rechnen um
+und erhalten 2.8 kW um einee kWh Strom zu erzeugen.
+Diese Werte sind natürlich viel höher als bei Bezug eines Zertifizierten 
+Strommixes. Wir gehen aber davon aus, das ein Durchschnittlicher Strommix
+vom Anbieter bezogen wird.
+
 Wir betrachten die Erdwärme als öffentliches Gut, das unbegrenzt und kostenlos
 zur Verfügung steht.
 
@@ -42,12 +51,15 @@ Ein Ölbrennwertkessel bezieht seine Energie in Form von Heizöl.
 Wir können den Energieinput dadurch berechnen indem wir den Literverbrauch
 ansehen und die Energiedichte eines Liter Öls somit haben wir den
 Energieinput in kWH pro Jahr erfasst.
-Für einen Liter Heizöl dieses Typs wird so und so viel Energie gerechnet ...
+Die benötigte Energie für die Bereitstellung einer Menge Heizöl extraleicht
+wird als Vernachlässigbar angenommen. Da auch keine Klaren Angaben gefunden
+werden.
 
 Die Energie, welche bei der Herstellung und bei der Montage der Systeme
 verbraucht wird, werden wird nicht berücksichtigen.
 Wir nehmen an, das die Systeme im wesentlichen aus den gleichen Materialien
-gefertigt sind. Auch ignorieren wir die benötigte Energie für die Bohrungen der Löcher für die Erdwärmegewinnung.
+gefertigt sind. Auch ignorieren wir die benötigte Energie für die Bohrungen der
+Löcher für die Erdwärmegewinnung.
 Die Lebensdauer einer Heizung ist etwa die selbe wie die des Hauses, 
 30 - 50 Jahre.
 Da wir den Verbrauch pro Jahr berechnen würde sich die Graueenergie auf diesen
@@ -55,9 +67,12 @@ Zeitraum verteilen.
 
 \section{Output}
 
-Als Output haben wir die Nutzbare Heizleistung.
+Als Output haben wir die Wärmeleistung eines Grätes, genauer gesagt die
+Nennwärmeleistung.
 Um was handelt es sich hierbei?
-bla bla ...
+Die Nennwärmeleistung ist die nach Abzug von Verlusten tatsächlich nutzbare
+Energie pro Zeit in kW.
+[http://www.meineheizung.de/lexikon/nennwaermeleistung]
 
 Eine Heizung ist ein Wasserkreislauf der mit einer bestimmten Temperatur
 (Rücklauftemperatur) in das System eintritt und auf ein gewisses Temperaturniveau
@@ -65,9 +80,11 @@ gehoben wird (Vorlauftemperatur). Das erhitzte Wasser verlässt das System und
 gibt die aufgenommene Energie an die Umgebung ab.
  
 Moderne Heizungsysteme werden als Fussbodenheizung realisiert.
-Wir können die Benötigte Heizleistung für eine Fläche von 100 $m^2$
-berechnen.
-berechnung wie Hier ...
+Wir können die Benötigte Heizleistung für ein Zweistöckiges Ein bis Zwei
+Familienhaus mit einer Fläche von 100 $m^2$ und einer Raumhöhe von 2 m berechnen
+wenn wir eine Temperatur von 22 C° haben wollen.
+Dies Ergibt uns eine benötigte Hezleistung von etwa 10 Kw.
+[https://www.kaminofen-shop.de/heizleistung-berechnen.htm]
 
 Aus der Outputenergie können wir über den Wirkungsgrad Rückschlüsse über
 den Input anstellen.
