berechnung energie + CO2 pro jahr

--- a/latex/kapitel/energiebilanz.tex
+++ b/latex/kapitel/energiebilanz.tex
@@ -3,6 +3,10 @@
 
 Wir werden die Benötigte Energie und damit den $CO_2$ Ausstoss der Beiden
 Heizungen Anhand der von uns festgelegten Heizleistung von 10 kW.
+Wir nehmen an, dass eine Heizung 2300 Betriebsstunden aufweisst.
+
+[http://www.energie.ch/heizung]
+energie-experten.de
 
 \section{Wärmepumpe}
 
@@ -15,6 +19,8 @@ der Energie um diesen Strom bereitzustellen und den damit einhergehenden $CO_2$
 Ausstoss.
 Wir erhalten 5.46 kW Gesammtverbrauch und 445.5 g $C0_2$.
 
+Pro Jahr ergibt das 1t $CO_2$ Emissionen und einen Energieverbrauch von 12558 kWh.
+
 \section{Ölbrennwertkessel}
 
 Wir betrachten den Wirkungsgrad der Ölheizung.
@@ -25,6 +31,9 @@ insgesammt 33.99 kW.
 Der $CO_2$ Ausstoss liegt bei 290 g CO2 pro kwh.
 [http://www.co2-emissionen-vergleichen.de/Heizungsvergleich/CO2-Vergleich-Heizung.html].
 das Ergibt uns einen $CO_2$ Ausstoss von 9857 g.
+
+Pro Jahr ergibt das 22,7 t $CO_2$ und einem Energiebedarf von 78177 kWh.
+
 
 \section{Vergleich}
 
