cizations in systemgrenze + energiebilanz

--- a/latex/datenbanken/bibliography.bib
+++ b/latex/datenbanken/bibliography.bib
@@ -5,68 +5,62 @@
 % Authors: brd3
 %
 
-@book{kopka:band1,
-	author = {Helmut Kopka},
-	title = {\LaTeX, Band 1: Eine Einführung},
-	publisher = {Pearson Studium},
-	journal = {Operations Research},
-	volume = {3},
-	year = {2002},
-	isbn = {3827370388}
+@booklet{heizung:berechnung,
+    author = {kaminofen-shop.de},
+    title = {Wärmebedarfsberechnung},
+    year = {2016},
+    url = {https://www.kaminofen-shop.de/heizleistung-berechnen.htm},
 }
 
-@booklet{raichle:bibtex_programmierung,
-  title = {Einführung in die {BibTeX}-{P}rogrammierung},
-  author = {Bernd Raichle},
-  year = {2002},
-  institution = {DANTE},
-  url = {http://www.dante.de/dante/events/dante2002/handouts/raichle-bibtexprog.pdf}
+@booklet{heizung:nennwarmeleistung,
+    author = {meineheizung.de},
+    title = {Nennwärmeleistung},
+    year = {2016},
+    url = {http://www.meineheizung.de/lexikon/nennwaermeleistung},
 }
 
-@misc{MiKTeX,
-  author = {Christian Schenk},
-  title = {{MiKTeX Project Page}},
-  url = {http://www.miktex.org/},
+@booklet{bafu:strommix,
+    author = {Philippe Stolz, Rolf Frischknecht},
+    title = {Umweltbilanz Strommix Schweiz 2011},
+    year = {2015},
 }
 
-@misc{KOMA,
-  title = {{KOMAScript} documentation project},
-  url = {http://koma-script.net.tf},
-  key = {KOMA}
+@booklet{heizung:heizung,
+    author = {Rolf Gloor ,energie.ch},
+    title = "Heizung",
+    url = {http://www.energie.ch/heizung},
+    year = {2013},
 }
 
-@misc{TeXnicCenter,
-  author = {Sven Wiegand},
-  title = {{TeXnicCenter}},
-  url = {http://www.TeXnicCenter.org/},
+@booklet{heizung:co2vergleich,
+  author = {co2-emissionen-vergleichen.de},
+  title = {Heizungsvergleich: CO2-Emissionen der Gasheizung, Wärmepumpe, Ölheizung},
+  year = {2010},
+  url = {http://www.co2-emissionen-vergleichen.de/Heizungsvergleich/CO2-Vergleich-Heizung.html},
 }
 
-@booklet{Marti06,
-		author = {Fausi Marti},
-		title = {Schreiben über {T}echnik -- {R}edaktion und {G}estaltung von technischen {B}erichten und anderen technikbezogenen {T}exten},
-		publisher = {Fausi Marti -- BFH},
-		year = {2006},
-		organization = {Berner Fachhochschule}
-}
 
-@booklet{Erbsland08,
-    author = {Tobias Erbsland and Andreas Nitsch},
-    title = {Diplomarbeit mit {LaTeX}},
-    volume = {1.12},
-    year = {2008},
-    url = {http://drzoom.ch/project/dml/},
-}
 
-@booklet{juergens:einfuehrung,
-    author = {Manuela Jürgens},
-    title = {LaTeX -- eine {E}inführung und ein bisschen mehr...},
-    year = {2000},
-    url = {http://www.fernuni-hagen.de/zmi/katalog/A026.shtml},
-}
 
-@booklet{juergens:fortgeschritten,
-    author = {Manuela Jürgens},
-    title = {LaTeX -- {F}ortgeschrittene {A}nwendungen},
-    year = {1995},
-    url = {http://www.fernuni-hagen.de/zmi/katalog/A027.shtml},
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
