--- a/latex/kapitel/energiebilanz.tex
+++ b/latex/kapitel/energiebilanz.tex
@@ -3,10 +3,8 @@
 
 Wir werden die Benötigte Energie und damit den $CO_2$ Ausstoss der Beiden
 Heizungen Anhand der von uns festgelegten Heizleistung von 10 kW.
-Wir nehmen an, dass eine Heizung 2300 Betriebsstunden aufweisst.
-
-[http://www.energie.ch/heizung]
-energie-experten.de
+Wir nehmen an, dass eine Heizung 2300 Betriebsstunden aufweist
+\cite{heizung:heizung}.
 
 \section{Wärmepumpe}
 
@@ -14,10 +12,10 @@ Mit Hilfe des COP berechnen wir die Benötigte Stromleistung bei einer
 Aussentemperatur von 6.6 C°.
 Das Ergibt eine Stromleistung 1.95 kW.
 
-Wir Errechnen anhand des vorher definierten Energiemixes den Gesammtverbrauch
+Wir Errechnen anhand des vorher definierten Energiemixes den Gesamtverbrauch
 der Energie um diesen Strom bereitzustellen und den damit einhergehenden $CO_2$
 Ausstoss.
-Wir erhalten 5.46 kW Gesammtverbrauch und 445.5 g $C0_2$.
+Wir erhalten 5.46 kW Gesamtverbrauch und 445.5 g $C0_2$.
 
 Pro Jahr ergibt das 1t $CO_2$ Emissionen und einen Energieverbrauch von 12558 kWh.
 
@@ -27,9 +25,8 @@ Wir betrachten den Wirkungsgrad der Ölheizung.
 Laut Herstellerangaben Liegt dieser bei 97\%.
 Damit kommen wir auf einen Bedarf von 10.3 kW.
 Nun beziehen wir noch die Produktionsenergie für das ÖL mit ein und erhalten
-insgesammt 33.99 kW.
-Der $CO_2$ Ausstoss liegt bei 290 g CO2 pro kwh.
-[http://www.co2-emissionen-vergleichen.de/Heizungsvergleich/CO2-Vergleich-Heizung.html].
+insgesamt 33.99 kW.
+Der $CO_2$ Ausstoss liegt bei 290 g CO2 pro kwh.\cite{heizung:co2vergleich}
 das Ergibt uns einen $CO_2$ Ausstoss von 9857 g.
 
 Pro Jahr ergibt das 22,7 t $CO_2$ und einem Energiebedarf von 78177 kWh.
