--- a/latex/kapitel/systemgrenze.tex
+++ b/latex/kapitel/systemgrenze.tex
@@ -35,8 +35,7 @@ Die Solewasserwärmepumpe bezieht ihre Energie hauptsächlich aus zwei Quellen:
 Für uns ist vor allem der Stromverbrauch interessant, da dies ein Kostenpunkt
 ist und damit auch Umweltbelastungen verbunden sind.
 
-Als Grundlage nehmen wir den Liferanten-Strommix in der Schweiz nach
-[Umweltbilanz Strommix Schweiz 2011]
+Als Grundlage nehmen wir den Liferanten-Strommix in der Schweiz\cite{bafu:strommix}
 dieser veruhrsacht 81.6 g $CO_2 /kWh$
 und benötgt bei der Produktion 10.1 MJ/kWh wir Rechnen um
 und erhalten 2.8 kW um einee kWh Strom zu erzeugen.
@@ -71,8 +70,7 @@ Als Output haben wir die Wärmeleistung eines Grätes, genauer gesagt die
 Nennwärmeleistung.
 Um was handelt es sich hierbei?
 Die Nennwärmeleistung ist die nach Abzug von Verlusten tatsächlich nutzbare
-Energie pro Zeit in kW.
-[http://www.meineheizung.de/lexikon/nennwaermeleistung]
+Energie pro Zeit in kW.\cite{heizung:nennwarmeleistung}
 
 Eine Heizung ist ein Wasserkreislauf der mit einer bestimmten Temperatur
 (Rücklauftemperatur) in das System eintritt und auf ein gewisses Temperaturniveau
@@ -84,7 +82,7 @@ Wir können die Benötigte Heizleistung für ein Zweistöckiges Ein bis Zwei
 Familienhaus mit einer Fläche von 100 $m^2$ und einer Raumhöhe von 2 m berechnen
 wenn wir eine Temperatur von 22 C° haben wollen.
 Dies Ergibt uns eine benötigte Hezleistung von etwa 10 Kw.
-[https://www.kaminofen-shop.de/heizleistung-berechnen.htm]
+\cite{heizung:berechnung}
 
 Aus der Outputenergie können wir über den Wirkungsgrad Rückschlüsse über
 den Input anstellen.
