--- a/latex/datenbanken/bibliography.bib
+++ b/latex/datenbanken/bibliography.bib
@@ -39,6 +39,19 @@
   url = {http://www.co2-emissionen-vergleichen.de/Heizungsvergleich/CO2-Vergleich-Heizung.html},
 }
 
+@booklet{junkers:stm-100-1,
+   author = {junkers},
+   title = {STM 100-1, 7738600325},
+   year = {2015},
+   url = {http://www.junkers.com/endkunde/produkte/produktinformation/produktkatalog_4416},
+}
+
+@booklet{junkers:kub-19-4,
+   author = {junkers},
+   title = {Suprapur-O, KUB 19-4, 7736600773},
+   year = {2015},
+   url = {http://www.junkers.com/endkunde/produkte/produktinformation/produktkatalog_5056},
+}
 
 
 
