--- a/latex/kapitel/einleitung.tex
+++ b/latex/kapitel/einleitung.tex
@@ -2,7 +2,7 @@
 \label{chap:einleitung}
 
 In diesem Projekt untersuchen wir anhand zwei Heizungsmodellen von Junkers\footnote{\url{http://www.junkers.com/}} die Nachhaltigkeit einer Solewasserwärmepumpe. \\
-Als Referenz für die Wärmepumpe nehmen wir die STM 100-1\footnote{\url{http://www.junkers.com/endkunde/produkte/produktinformation/produktkatalog_4416}}. Für den Ölbrennwertkessel benutzen wir den TODO.
+Als Referenz für die Wärmepumpe nehmen wir die STM 100-1\cite{junkers:stm-100-1}. Für den Ölbrennwertkessel benutzen wir den KUB 19-4 \cite{junkers:kub-19-4}.
 
 Wir werden die Nachhaltigkeit dieser zwei Systeme untersuchen und aufzeigen was alles für den Betrieb notwendig ist. Jedoch können wir die Herstellung und Montage der Heizungen nicht miteinbeziehen, da dies nicht im Rahmen dieses Projekts machbar ist.
 
