--- a/latex/datenbanken/bibliography.bib
+++ b/latex/datenbanken/bibliography.bib
@@ -53,6 +53,12 @@
    url = {http://www.junkers.com/endkunde/produkte/produktinformation/produktkatalog_5056},
 }
 
+@booklet{junkers:home,
+  author = {junkers},
+  title = {junkers},
+  url = {http://junkers.com},
+}
+
 
 
 
