--- a/latex/datenbanken/bibliography.bib
+++ b/latex/datenbanken/bibliography.bib
@@ -61,7 +61,11 @@
 
 
 
-
+@booklet{junkers:funktionwarmepumpe,
+  author = {junkers},
+  title = {Wärmepumpen, Eine saubere, sichere und zuverlässige Wärmequelle},
+  url =  {http://www.junkers.com/fachkunde/produkte_fachkunde/heiztechnik_erklaert/waermepumpen_erklaert/waermepumpen},
+}
 
 
 
