--- a/latex/kapitel/energiebilanz.tex
+++ b/latex/kapitel/energiebilanz.tex
@@ -34,4 +34,42 @@ Pro Jahr ergibt das 22,7 t $CO_2$ und einem Energiebedarf von 78177 kWh.
 
 \section{Vergleich}
 
+Wenn wir die beiden Systeme direkt miteinander vergleichen, sehen wir dass,
+wie erwartet, die Wärmepumpe gegenüber der Ölheizung
+sowohl im Energieverbrauch sowie im Ausstoss von Treibhausgas besser abschneidet.
 
+In der Folgenden Tabelle sehen Wir den Vergleich Zusammengefasst.
+
+\begin{tabular}{|l|l|l|}
+
+\hline
+  System   & Energie Verbrauch kWh pro jahr & $CO_2$ Ausstoss in t pro Jahr\\
+\hline
+ Ölbrenwertkessel KUB 19-4           & 78177 & 22,7 \\
+\hline
+ Solewasser Erdwärmepumpe STM 100-1  & 12558 & 1     \\
+\hline
+\end{tabular}
+
+Wir sehen, dass die Solewasserwärme Pumpe massiv besser abschneidet.
+Während der Energiebedarf etwa nur noch einem Sechstel entspricht konnte
+der $CO_2$ Ausstoss massiv auf etwa einen Dreiundzwanzigstel reduziert werden.
+
+Wir denken, das sich wie folgt erklären lässt.
+Zum einen Bezieht die Wärmepumpe den Hauptanteil, etwa Drei Viertel, der Benötigten Energie
+aus der Erdwärme \cite{junkers:funktionwarmepumpe}.
+Das heisst das der Reale Energieverbrauch bei etwa 50000 kWh
+pro Jahr läge. Das ist immer noch Energiesparender als eine Ölheizung und
+zu beachten ist, das die Erdwärme als natürliche Energiequelle frei vorhanden
+und erneuerbar zur Verfügung steht.
+
+Zum anderen denken wir, das der herkömmliche Schweizer Strommix im grossen und
+ganzen relativ Nachhaltig ist. Das liegt daran das der Strom zu einem Grossteil
+aus Wasserkraft gewonnen wird \cite{bafu:strommix}.
+Atomstrom wird zum Teil produziert und importiert, dieser verursacht zwar kein
+$CO_2$ gilt aber als nicht nachhaltig, da der Atommüll verehrende Folgen
+nach sich zieht.
+Der Anteil an Atomstrom ist in den letzten Jahren gesunken.
+
+Somit wird es Energietechnisch und bezogen auf die Umwelt immer sinnvoller
+Heizsysteme als Wärmepumpe zu realisieren.
