--- a/latex/kapitel/energiebilanz.tex
+++ b/latex/kapitel/energiebilanz.tex
@@ -15,7 +15,7 @@ Das Ergibt eine Stromleistung 1.95 kW.
 Wir Errechnen anhand des vorher definierten Energiemixes den Gesamtverbrauch
 der Energie um diesen Strom bereitzustellen und den damit einhergehenden $CO_2$
 Ausstoss.
-Wir erhalten 5.46 kW Gesamtverbrauch und 445.5 g $C0_2$.
+Wir erhalten 5.46 kW Gesamtverbrauch und 445.5 g $CO_2$.
 
 Pro Jahr ergibt das 1t $CO_2$ Emissionen und einen Energieverbrauch von 12558 kWh.
 
