--- a/latex/miniprojekt_waermepumpe.tex
+++ b/latex/miniprojekt_waermepumpe.tex
@@ -182,6 +182,7 @@
 \include{kapitel/systemgrenze}
 \include{kapitel/energiebilanz}
 \include{kapitel/fazit}
+\include{kapitel/reflexion}
 
 
 %---------------------------------------------------------------------------
