list of tables and table references

--- a/latex/kapitel/rosette.tex
+++ b/latex/kapitel/rosette.tex
@@ -13,6 +13,7 @@ Für beide Systeme wird nun eine Nachhaltigkeitsrosette erstellt. Dabei besteht 
 
 \end{figure}
 
+\begin{table}
 \begin{center}
 \begin{tabular}[c]{|p{0.25 \textwidth}|p{0.25 \textwidth}|p{0.25 \textwidth}|}
 
@@ -59,6 +60,10 @@ Für beide Systeme wird nun eine Nachhaltigkeitsrosette erstellt. Dabei besteht 
 
 \end{tabular}
 \end{center}
+\label{rosette:score}
+\caption{Punktetabelle für die Nachhaltikeitsrosette}
+\end{table}
+
 
 \subsection{Erklärungen}
 
