--- a/latex/kapitel/energiebilanz.tex
+++ b/latex/kapitel/energiebilanz.tex
@@ -40,6 +40,8 @@ sowohl im Energieverbrauch sowie im Ausstoss von Treibhausgas besser abschneidet
 
 In der Folgenden Tabelle sehen Wir den Vergleich Zusammengefasst.
 
+\begin{table}
+\begin{center}
 \begin{tabular}{|l|l|l|}
 
 \hline
@@ -50,6 +52,10 @@ In der Folgenden Tabelle sehen Wir den Vergleich Zusammengefasst.
  Solewasser Erdwärmepumpe STM 100-1  & 12558 & 1     \\
 \hline
 \end{tabular}
+\end{center}
+\label{bilanz:vergleich}
+\caption{Direktvergleich Energiebilanz der Heizungen}
+\end{table}
 
 Wir sehen, dass die Solewasserwärme Pumpe massiv besser abschneidet.
 Während der Energiebedarf etwa nur noch einem Sechstel entspricht konnte
