--- a/latex/datenbanken/bibliography.bib
+++ b/latex/datenbanken/bibliography.bib
@@ -59,13 +59,33 @@
   url = {http://junkers.com},
 }
 
-
-
 @booklet{junkers:funktionwarmepumpe,
   author = {junkers},
   title = {Wärmepumpen, Eine saubere, sichere und zuverlässige Wärmequelle},
   url =  {http://www.junkers.com/fachkunde/produkte_fachkunde/heiztechnik_erklaert/waermepumpen_erklaert/waermepumpen},
 }
+
+@booklet{fws:faq,
+author	=	{fws},
+title	=	{FAQ Fachvereinigung Wärmepumpen Schweiz},
+url = {http://www.fws.ch/haeufig-gestellte-fragen.html},
+note = {Aufgerufen am 29.05.2016}
+}
+
+@booklet{offerten24:oel,
+author	=	{offerten24},
+title	=	{Offerten 24 Ölheizung},
+url = {http://www.offerten24.ch/oelheizung},
+note = {Aufgerufen am 29.05.2016}
+}
+
+@booklet{offerten24:wp,
+author	=	{offerten24},
+title	=	{Offerten 24 Wärmepumpen},
+url = {http://www.offerten24.ch/waermepumpen/preise},
+note = {Aufgerufen am 29.05.2016}
+}
+
 
 
 
