--- a/latex/kapitel/rosette.tex
+++ b/latex/kapitel/rosette.tex
@@ -8,35 +8,35 @@ Für beide Systeme wird nun eine Nachhaltigkeitsrosette erstellt. Dabei besteht 
 \section{Bewertung}
 
 \begin{figure}[h]
+\includegraphics[scale=0.54]{bilder/Rosette.png}
 \caption{Nachhaltigkeitsrosette}
-\includegraphics[scale=0.5]{bilder/Rosette.png}
-
 \end{figure}
 
+\begin{table}
 \begin{center}
 \begin{tabular}[c]{|p{0.25 \textwidth}|p{0.25 \textwidth}|p{0.25 \textwidth}|}
 
   \hline
-  \textbf{\Large{Kriterium}} &
-  \textbf{\Large{Wärmepumpe}} &
-  \textbf{\Large{Ölbrennwertkessel}} \\ \hline
+  \textbf{Kriterium} &
+  \textbf{Wärmepumpe} &
+  \textbf{Ölbrennwertkessel} \\ \hline
 
-  \multicolumn{3}{|c|}{\textbf{\Large{Umwelt}}} \\ \hline
+  \multicolumn{3}{|c|}{\textbf{Umwelt}} \\ \hline
   
   Emissionen
-  & 8 & 3 \\
+  & 9 & 2 \\
   Fossile Ressourcen
   & 7 & 1 \\
   Effizienz
-  & 7 & 7 \\
+  & 8 & 7 \\
   Lebensdauer
-  & 5 & 5 \\ %Recherche nötig
+  & 5 & 8 \\
   \hline
   
-  \multicolumn{3}{|c|}{\textbf{\Large{Wirtschaft}}} \\ \hline
+  \multicolumn{3}{|c|}{\textbf{Wirtschaft}} \\ \hline
   
   Preis
-  & 0 & 0 \\ %Recherche nötig
+  & 4 & 8 \\
   Montagekosten
   & 4 & 7 \\
   Betriebskosten
@@ -45,20 +45,22 @@ Für beide Systeme wird nun eine Nachhaltigkeitsrosette erstellt. Dabei besteht 
   & 5 & 8 \\
   \hline
 
-  \multicolumn{3}{|c|}{\textbf{\Large{Gesellschaft}}} \\ \hline
+  \multicolumn{3}{|c|}{\textbf{Gesellschaft}} \\ \hline
 
   Akzeptanz
   & 8 & 3 \\
   Lärmbelastung
-  & 5 & 7 \\
+  & 5 & 5 \\
   Trend
   & 7 & 4 \\
   Politische Einstellung
-  & 7 & 3 \\ %Recherche nötig
+  & 7 & 3 \\
   \hline
 
 \end{tabular}
 \end{center}
+\caption{Kriterien für Nachhaltigkeitsrosette}
+\end{table}
 
 \subsection{Erklärungen}
 
@@ -70,19 +72,19 @@ Für beide Systeme wird nun eine Nachhaltigkeitsrosette erstellt. Dabei besteht 
 
 \item \textbf{Effizienz}: Beide ziemlich ähnlich. Ölheizungen erreichen einen Wirkungsgrad von bis zu 97\%. Die Wärmepumpe braucht viel Strom, kann aber einen Grossteil der Wärme aus dem Erdkreislauf bekommen.
 
-\item \textbf{Lebensdauer}: Recherche
+\item \textbf{Lebensdauer}: Wärmepumpen haben eine Lebensdauer von 15-20 Jahren \cite{fws:faq}. Bei den Ölbrennwertkesseln rechnet man mit 20-25 Jahren\cite{offerten24:oel}.
 
-\item \textbf{Preis}: Recherche
+\item \textbf{Preis}: Für eine Ölheizung muss mit etwa 15'000 CHF{offerten24:oel} gerechnet werden. Bei einer Wärmepumpe betragen die Installationskosten etwa 35'000 CHF.{offerten24:wp}
 
 \item \textbf{Montagekosten}: Ölheizung im Vorteil, da die Wärmepumpe aufwändige Bohrungen benötigt.
 
 \item \textbf{Betriebskosten}: Wärmepumpe hat den Vorteil des Erdwärmekreislaufs. Dadurch muss nicht die ganze Wärmeleistung von aussen zugeführt werden, wie bei der Ölheizung.
 
-\item \textbf{Verfügbarkeit}: Ölheizung benötigt nur ein Tank, welcher fast überall platziert werden kann. Die Wärmepumpe kann nicht überall eingesetzt werden, da tiefe Bohrungen notwendig sind. 
+\item \textbf{Verfügbarkeit}: Ölheizung benötigt nur ein Tank, welcher fast überall platziert werden kann. Die Wärmepumpe kann nicht überall eingesetzt werden, da tiefe Bohrungen notwendig sind, welche am Standort bewilligt werden müssen. 
 
 \item \textbf{Akzeptanz}: Durch die Globalisierung wird die Nachhaltigkeit immer mehr betont. Dadurch ist die Akzeptanz für Wärmepumpen sicher um einiges höher, da Öl schnell mit Umweltverschmutzung in Verbindung gebracht wird.
 
-\item \textbf{Lärmbelastung}: Wärmepumpen sind im Betrieb ein bisschen lauter als Ölheizungen.
+\item \textbf{Lärmbelastung}: Die Solewasser-Wärmepumpe ist etwa gleich laut wie eine Ölheizung.
 
 \item \textbf{Trend}: Ähnlich wie bei der Akzeptanz, begünstigen die Medien und die aktuelle Ressourcenlage den Trend nach nachhaltigeren Produkten und Systemen.
 
