--- a/latex/kapitel/rosette.tex
+++ b/latex/kapitel/rosette.tex
@@ -59,10 +59,8 @@ Für beide Systeme wird nun eine Nachhaltigkeitsrosette erstellt. Dabei besteht 
 
 \end{tabular}
 \end{center}
-\label{rosette:score}
-\caption{Punktetabelle für die Nachhaltigkeitsrosette}
+\caption{Kriterien für Nachhaltigkeitsrosette}
 \end{table}
-
 
 \subsection{Erklärungen}
 
