fixed different smaller issues

--- a/latex/kapitel/fazit.tex
+++ b/latex/kapitel/fazit.tex
@@ -2,3 +2,22 @@
 \label{chap:fazit}
 
 \chapter{Schlussfolgerung}
+
+Unsere Vermutungen wurden bestätigt.
+Die Solewasserwärmepumpe ist eine Nachhaltige Technologie und ist im Vergleich
+mit dem Ölbrennwertkessel in fast allen Aspekten nachhaltiger.
+
+Wir haben Herausgefunden, dass die Wärmepumpe gesamthaft weniger $CO_2$
+produziert und auch weniger Energie für den Betrieb verbraucht. 
+Das obwohl die Ölheiztechnik eine sehr hohe Effizienz aufweist und
+als bewährte Technik gilt, die eine lange Entwicklung hinter sich hat und
+obwohl Heizöl eine sehr hohe Energiedichte aufweist.
+Erstaunlicher weise wird auch das produzieren von Strom (in bestimmten Ländern)
+immer Nachhaltiger.
+
+Die einzigen Nachteile die sie gegenüber dem Ölbrennwertkessel aufweist, liegt
+in der Lärmemission die von dem Kompressor der Wärmepumpe verursacht wird
+und der geringeren Vorlauftemperatur.
+Der Ölbrennwertkessel ist flexibler einsetzbar.
+Dies spielt aber eine Untergeordnete Rolle, da moderne Häuser sehr gut
+isoliert werden, also eine Hohe Vorlauftemperatur gar nicht nötig ist.
