--- a/latex/kapitel/swot.tex
+++ b/latex/kapitel/swot.tex
@@ -49,7 +49,7 @@
 
 Durch den Erdwärmekreislauf benötigt die Wärmepumpe für den Betrieb wenig Energie. Auch werden dadurch keine Schadstoffe während des Betriebs freigesetzt und keine fossilen Ressourcen wie z.B Öl gebraucht.
 
-Diese Vorteile sind aber mit gewissen Kosten verbunden. Die Montage ist sehr aufwändig und nicht Überall möglich, da ziemlich tiefe Bohrungen durchgefÃŒhrt werden müssen. Auch sind Wä
+Diese Vorteile sind aber mit gewissen Kosten verbunden. Die Montage ist sehr aufwändig und nicht Überall möglich, da ziemlich tiefe Bohrungen durchgeführt werden müssen. Auch sind Wä
 rmepumpen erst wirklich effizient, wenn das Haus eine Fussbodenheizung besitzt. Dies hängt mit der eher niedrigen Vorlauftemperatur der Wärmepumpen zusammen.
 
 In Zukunft können die Wärmepumpen sicher noch an Effizienz gewinnen. In Verbindung mit Solarzellen kann ein autonomes Heizungssystem entwickelt werden.
@@ -104,9 +104,9 @@ Die Wärmepumpe benötigt vor allem Strom für den Betrieb. Dadurch sind die Bet
 Auch die Montage ist der Heizung ist eher einfach. Es wird lediglich genügend Platz für den Öltank benötigt.
 
 Der grösste Nachteil ist ganz klar der Verbrauch von Öl und der Ausstoss von Schadstoffen. Zusätzlich wird die ganze Heizleistung aus der Ölverbrennung gewonnen.
-Dadurch sind die Betriebskosten sind stark abhÃ€ngig von dem Ölpreis.
+Dadurch sind die Betriebskosten sind stark abhängig von dem Ölpreis.
 Die Heizung ist aber eher ein Auslaufmodell, da nicht unendlich Öl auf der Erde zur Verfügung steht.
 
-Durch neue Technologien wie der Wärmepumpe oder der Solarwärme, wird die Ölheizung langsam verdrÄngt werden. Spätestens dann, wenn das Öl knapp wird und im Preis steigt.
+Durch neue Technologien wie der Wärmepumpe oder der Solarwärme, wird die Ölheizung langsam verdrängt werden. Spätestens dann, wenn das Öl knapp wird und im Preis steigt.
 
 
