--- a/latex/miniprojekt_waermepumpe.tex
+++ b/latex/miniprojekt_waermepumpe.tex
@@ -154,8 +154,8 @@
 
 % Title Page and Abstract
 %---------------------------------------------------------------------------
-%\include{vorspann/titelseite_ohne_bild}		% activate for Titelseite ohne Bild
-\include{vorspann/titelseite_mit_bild}			% activate for Titelseite mit Bild
+\include{vorspann/titelseite_ohne_bild}		% activate for Titelseite ohne Bild
+%\include{vorspann/titelseite_mit_bild}			% activate for Titelseite mit Bild
 %\include{vorspann/versionen}
 \cleardoubleemptypage
 \setcounter{page}{1}
