--- a/latex/vorspann/titelseite_ohne_bild.tex
+++ b/latex/vorspann/titelseite_ohne_bild.tex
@@ -39,21 +39,17 @@ Hier steht ein Untertitel 			\\							% Untertitel eingeben
 %---------------------------------------------------------------------------
 \begin{textblock}{150}(28,100)
 \fontsize{10pt}{12pt}\selectfont
-[Kurztext (Abstract) einfügen, falls gewünscht] \\ 
-Dieses Dokument dient als Vorlage für die Erstellung von Berichten nach den Richtlinien der BFH. Die Vorlage ist in \LaTeX{} erstellt und unterstützt das automatische Erstellen von diversen Verzeichnissen, Literaturangaben, Indexierung und Glossaren. Dieser kleine Text ist eine Zusammenfassung über das vorliegenden Dokument mit einer Länge von 4 bis max. 8 Zeilen. \\
-Das Titelbild kann in den Zeilen 157/158 der Datei template.tex ein- oder ausgeschaltet werden.
+
 \end{textblock}
 
 \begin{textblock}{150}(28,225)
 \fontsize{10pt}{17pt}\selectfont
 \begin{tabbing}
 xxxxxxxxxxxxxxx\=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx \kill
-Studiengang:	\> [z.B. Elektro- und Kommunikationstechnik]	\\			% Namen eingeben
-Autoren:		\> [Test Peter, Müster Rösä]		\\					% Namen eingeben
-Betreuer:	\> [Dr.~Xxxx Xxxx, Dr.~Yyyy Yyyy]		\\					% Namen eingeben
-Auftraggeber:	\> [Wwwww AG]						\\					% Namen eingeben
-Experten:		\> [Dr.~Zzzz Zzzz]				\\					% Namen eingeben
-Datum:			\> \versiondate					\\		% aus Datei vorspann/version.tex lesen
+Modul:	\> Nachhaltigkeit in den Ingenieurwissenschaften	\\			% Namen eingeben
+Studiengang:	\> Informatik	\\			% Namen eingeben
+Autoren:		\> Pascal GrÃ¼ter, Stefan Andonie		\\					% Namen eingeben
+Datum:			\> 29.05.2016					\\		
 \end{tabbing}
 
 \end{textblock}
@@ -62,7 +58,7 @@ Datum:			\> \versiondate					\\		% aus Datei vorspann/version.tex lesen
 \begin{textblock}{150}(28,280)
 \noindent 
 \color{bfhgrey}\fontsize{9pt}{10pt}\selectfont
-Berner Fachhochschule | Haute école spécialisée bernoise | Bern University of Applied Sciences
+Berner Fachhochschule | Haute Ã©cole spÃ©cialisÃ©e bernoise | Bern University of Applied Sciences
 \color{black}\selectfont
 \end{textblock}
 
