projekt skizze methodik angepasst

--- a/projektskizze/projekt_skize.tex
+++ b/projektskizze/projekt_skize.tex
@@ -86,7 +86,7 @@ Vergleich mit Ölbrennkessel in Bezug auf die Nachhaltigkeit.
 \subsection*{Methodik}
 
 Funktionsweise der Wärmepumpe und Ölbrennkessel beschreiben. Aspekte der Nachhaltigkeit aufzeigen indem wir für beide Produkte eine SWOT-Analyse, eine Energiebilanz und eine Nachhaltigkeitsrosette erstellen. \\
-Für den Vergleich gehen wir von einem definierten Raum aus (z.B. 100 m$^{3}$) und berechnen, wie viel Energie die beiden Heizungen brauchen, um diesen Raum um ein Grad Celsius zu erwärmen. Alternativ kann auch die Nutzfläche eines Gebäudes genommen werden um zu berechnen wieviel Leistung die beiden Heizungen aufbringen müssen um diese Fläche auf 20 Grad zu halten.
+Für den Vergleich gehen wir davon aus, das bei beiden Heizsysteme eine Wärmeleistung von 10 kW erzeugt werden möchte. Anhand es Wirkungsgrads und der Zusammensetzung des Inputs kann berechnet werden, wie viel Energie für diese Wärmeleistung notwendig ist. Alternativ kann auch die Nutzfläche eines Gebäudes genommen werden um zu berechnen wieviel Leistung die beiden Heizungen aufbringen müssen um diese Fläche auf 20 Grad zu halten.
 
 
 
