--- a/latex/anhang/reflexion.tex
+++ b/latex/anhang/reflexion.tex
@@ -1,6 +1,10 @@
 \chapter{Persönliche Reflexion}
 \label{chap:reflexion}
 
+\subsection{Stefan Andonie}
+
+TODO: Nur von deiner Sicht aus beschreiben
+
 Das Miniprojekt hat uns einen Einblick gegeben in die Methoden und Begriffe
 der Nachhaltigkeit.
 Im Umfang des Moduls Nachhaltigkeit in den Ingenieurwissenschaften haben wir
@@ -16,3 +20,11 @@ vereinfachen.
 Rückblickend können wir festhalten, dass es mithilfe der verschiedenen Methoden
 gelungen ist, eine einigermassen Zutreffende Aussage zu machen.
 
+\subsection{Pascal Grüter}
+
+Ich habe bei mir zuhause eine Erdwärmepumpe und es interessierte mich, ob diese Art Heizungssystem überhaupt nachhaltig ist. Durch diese Arbeit habe ich mehr erfahren über die Deklaration von Heizungen, ihrer Funktionsweise und der Nachhaltigkeit von Ölheizungen und Wärmepumpen.
+
+Wie ich am Anfang vermutet habe, ist die Wärmepumpe um einiges nachhaltiger als eine Ölheizung. Das ist natürlich vor allem wegen dem verwendeten Öl. Die Effizienz ist auch bei Ölheizungen sehr gut, was mich erstaunt hat.
+
+Durch diese Arbeit habe ich auch einen Einblick in die Aspekte der Nachhaltigkeit bekommen und gemerkt, dass eine vollständige Nachhaltigkeitsbewertung eines Produktes sehr komplex und aufwändig werden kann.
+In Zukunft werde ich noch mehr auf die Nachhaltigkeit von Produkten und Prozessen achten als vorher und auch kritischer damit umgehen.
