schlussfolgerung, rosette korrektur, titelseite korrektur

--- a/latex/kapitel/fazit.tex
+++ b/latex/kapitel/fazit.tex
@@ -1,23 +1,21 @@
-\chapter{Diskussion}
+\chapter{Schlussfolgerung}
 \label{chap:fazit}
 
-\chapter{Schlussfolgerung}
-
 Unsere Vermutungen wurden bestätigt.
-Die Solewasserwärmepumpe ist eine Nachhaltige Technologie und ist im Vergleich
-mit dem Ölbrennwertkessel in fast allen Aspekten nachhaltiger.
+Die Sole-Wasser Wärmepumpe ist eine nachhaltige Technologie und ist im Vergleich
+mit dem Ölbrennwertkessel in vielen Aspekten nachhaltiger.
 
-Wir haben Herausgefunden, dass die Wärmepumpe gesamthaft weniger $CO_2$
+Wir haben herausgefunden, dass die Wärmepumpe gesamthaft weniger $CO_2$
 produziert und auch weniger Energie für den Betrieb verbraucht. 
-Das obwohl die Ölheiztechnik eine sehr hohe Effizienz aufweist und
+Obwohl die Ölheiztechnik eine sehr hohe Effizienz aufweist und
 als bewährte Technik gilt, die eine lange Entwicklung hinter sich hat und
 obwohl Heizöl eine sehr hohe Energiedichte aufweist.
 Erstaunlicher weise wird auch das produzieren von Strom (in bestimmten Ländern)
-immer Nachhaltiger.
+immer nachhaltiger.
 
-Die einzigen Nachteile die sie gegenüber dem Ölbrennwertkessel aufweist, liegt
+Die Nachteile die sie gegenüber dem Ölbrennwertkessel aufweist, liegt
 in der Lärmemission die von dem Kompressor der Wärmepumpe verursacht wird
-und der geringeren Vorlauftemperatur.
-Der Ölbrennwertkessel ist flexibler einsetzbar.
-Dies spielt aber eine Untergeordnete Rolle, da moderne Häuser sehr gut
-isoliert werden, also eine Hohe Vorlauftemperatur gar nicht nötig ist.
+und der geringeren Vorlauftemperatur. Auch die hohen Montagekosten der Wärmepumpe können abschreckend wirken. Jedoch wird das durch die niedrigen Betriebskosten wieder ausgeglichen.
+
+Durch du flexiblere Vorlauftemperatur ist der Ölbrennwertkessel flexibler einsetzbar.
+Dies spielt aber eine untergeordnete Rolle, da moderne Häuser sehr gut isoliert werden und meistens auch Bodenheizschlaufen besitzen. Dadurch ist eine hohe Vorlauftemperatur gar nicht nötig. Auch wurde bei den neueren Wärmepumpen die Vorlauftemperatur verbessert und mit noch besserer Technik, sollte dieser Unterschied zur Ölheizung nur noch sehr klein sein.
