--- a/latex/kapitel/rosette.tex
+++ b/latex/kapitel/rosette.tex
@@ -50,7 +50,7 @@ Für beide Systeme wird nun eine Nachhaltigkeitsrosette erstellt. Dabei besteht 
   Akzeptanz
   & 8 & 3 \\
   Lärmbelastung
-  & 5 & 5 \\
+  & 5 & 6 \\
   Trend
   & 7 & 4 \\
   Politische Einstellung
@@ -84,7 +84,7 @@ Für beide Systeme wird nun eine Nachhaltigkeitsrosette erstellt. Dabei besteht 
 
 \item \textbf{Akzeptanz}: Durch die Globalisierung wird die Nachhaltigkeit immer mehr betont. Dadurch ist die Akzeptanz für Wärmepumpen sicher um einiges höher, da Öl schnell mit Umweltverschmutzung in Verbindung gebracht wird.
 
-\item \textbf{Lärmbelastung}: Die Solewasser-Wärmepumpe ist etwa gleich laut wie eine Ölheizung.
+\item \textbf{Lärmbelastung}: Die Sole-Wasser Wärmepumpe ist ein bisschen lauter, wegen dem Kompressor. 
 
 \item \textbf{Trend}: Ähnlich wie bei der Akzeptanz, begünstigen die Medien und die aktuelle Ressourcenlage den Trend nach nachhaltigeren Produkten und Systemen.
 
