--- a/latex/vorspann/titelseite_ohne_bild.tex
+++ b/latex/vorspann/titelseite_ohne_bild.tex
@@ -28,11 +28,11 @@
 \vspace{2mm}
 
 \fontsize{16pt}{24pt}\selectfont\vspace{0.3em}
-Hier steht ein Untertitel 			\\							% Untertitel eingeben
+Nachhaltigkeitsanalyse \\							% Untertitel eingeben
 \vspace{5mm}
 
 \fontsize{10pt}{12pt}\selectfont
-\textbf{Art der Arbeit (Semesterarbeit / Bachelorthesis / etc.)} \\									% eingeben
+\textbf{Mini-Projekt} \\									% eingeben
 \vspace{7mm}
 
 % Abstract (eingeben):
